--- a/static/styles.css
+++ b/static/styles.css
@@ -16,9 +16,11 @@ body {
 }
 
 .container {
-  padding-top: 10px;
+  padding-top: 5rem;
   background-color: rgba(255, 255, 255, 0.88);
   border-radius: 8px;
+  display: flex;
+  justify-content: center;
 }
 
 .logo{
@@ -29,14 +31,14 @@ body {
   text-decoration: none;
 }
 
-nav{
+.nav{
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: sticky;
+  position: fixed;
   top: 0;
-  z-index: 100;
+  z-index: 1000;
   background: rgb(255, 250, 250);
 }
 
@@ -101,7 +103,7 @@ div.row {
 
 .btn-fn {
   display: inline-block;
-  width: 20%;
+  width: 20rem;
   padding: 10px;
   font-size: 16px;
   color: #fff;
@@ -226,7 +228,11 @@ div.row {
   display: flex;
   justify-content: center;
   user-select: none;
+  
   /* align-items: center; */
+}
+.s1 {
+  margin-top: 5rem;
 }
 .hr-line{
   background-color: rgb(0, 0, 0);
@@ -348,10 +354,6 @@ div.row {
 }
 
 @media (max-width: 575.98px) {
-  .btn-fn, .btn {
-      width: 100%;
-      margin-bottom: 10px;
-  }
 
   .modal-header .close {
       padding: 1rem;
@@ -363,6 +365,12 @@ div.row {
   }
 }
 
+@media (min-width: 320px) {
+  .btn-fn, .btn {
+    width: 20%;
+    margin-bottom: 10px;
+  }
+}
 /* Extra small devices (phones, less than 576px) */
 @media (max-width: 575.98px) {
   .modal-content {
@@ -569,3 +577,6 @@ div.row {
   }
 }
 
+.con{
+  width: 50rem;
+}
