--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,30 +1,36 @@
 {% extends "base.html" %}
 {% block title %}Sign Up{% endblock %}
 {% block body %}
-<form method="POST">
-    <h2 style="text-align: center;">Sign Up</h2>
-    <!-- Email -->
-    <div class="form-group">
-        <label for="email">Email Address</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email">
+<div class="container">
+    <div class="con">
+        <form method="POST">
+            <h2 style="text-align: center;">Sign Up</h2>
+            <!-- Email -->
+            <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email">
+            </div>
+            <!-- First Name -->
+            <div class="form-group">
+                <label for="firstName">First Name</label>
+                <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter your First Name">
+            </div>
+            <!-- Password -->
+            <div class="form-group">
+                <label for="password1">Password</label>
+                <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter your Password">
+            </div>
+            <!-- Confirm Password -->
+            <div class="form-group">
+                <label for="password2">Password [Confirm]</label>
+                <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm your Password">
+            </div>
+            <br>
+            <!-- Submit Button -->
+            <div class="sub-nav text-center">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
     </div>
-    <!-- First Name -->
-    <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter your First Name">
-    </div>
-    <!-- Password -->
-    <div class="form-group">
-        <label for="password1">Password</label>
-        <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter your Password">
-    </div>
-    <!-- Confirm Password -->
-    <div class="form-group">
-        <label for="password2">Password [Confirm]</label>
-        <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm your Password">
-    </div>
-    <br>
-    <!-- Submit Button -->
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</div>
 {% endblock %}
