--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -3,7 +3,9 @@
 {% block body %}
 <!-- edited -->
 <div class="container">
-    <div class="balance_box bal">
+    <div class="row">
+        <div id="mymodal">
+        <div class="balance_box bal">
         <h2>&#128176;BALANCE</h2>
         <p class="balance-amt">{{ balance }}</p>
     </div>
@@ -53,7 +55,9 @@
     <!-- Add Chart.js Histogram -->
     <canvas id="histogram" width="4" height="2"></canvas>
 </div>
-
+</div>
+</div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
